Crash after delete material #70441

Closed
opened 2019-10-02 11:11:24 +02:00 by Pietro Elia Appeddu · 12 comments

System Information
Operating system: Linux-5.0.0-30-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: AMD Radeon (TM) Pro WX 5100 Graphics ATI Technologies Inc. 4.5.13556 Core Profile Context FireGL

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-10-02 08:22, hash: f97a64aa9b
Worked: (optional)

Short description of error
Crash after delete material

Exact steps for others to reproduce the error

  1. Open Blender
  2. Go to Shading
  3. Delete material output
  4. Crash
**System Information** Operating system: Linux-5.0.0-30-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: AMD Radeon (TM) Pro WX 5100 Graphics ATI Technologies Inc. 4.5.13556 Core Profile Context FireGL **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-10-02 08:22, hash: `f97a64aa9b` Worked: (optional) **Short description of error** Crash after delete material **Exact steps for others to reproduce the error** 1) Open Blender 2) Go to Shading 3) Delete material output 4) Crash

Added subscriber: @PietroEliaAppeddu

Added subscriber: @PietroEliaAppeddu

#70442 was marked as duplicate of this issue

#70442 was marked as duplicate of this issue

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I can confirm.

Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86
2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: 3b23685c7d

I can confirm. > Operating system: Windows-10-10.0.16299 64 Bits > Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 > 2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: `3b23685c7d`
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking... (probably 5c79f2d0fba7?)

Can confirm, checking... (probably 5c79f2d0fba7?)
Member

crashes here node_start is NULL

1   iter_backwards_ex               node.c                955  0x2e6cb4c 
2   nodeChainIterBackwards          node.c                998  0x2e6cc68 
3   ntreeGPUMaterialNodes           node_shader_tree.c    861  0x47023a9 
4   GPU_material_from_nodetree      gpu_material.c        677  0x8289a79 
5   DRW_shader_create_from_material draw_manager_shader.c 443  0x392216b 
6   EEVEE_material_mesh_get         eevee_materials.c     725  0x38c2d42 
7   material_opaque                 eevee_materials.c     1161 0x38c4058 
8   EEVEE_materials_cache_populate  eevee_materials.c     1486 0x38c518a 
9   EEVEE_cache_populate            eevee_engine.c        123  0x38b5333 
10  drw_engines_cache_populate      draw_manager.c        1145 0x3882e47 
11  DRW_draw_render_loop_ex         draw_manager.c        1663 0x38842cf 
12  DRW_draw_view                   draw_manager.c        1565 0x3883e2b 
13  view3d_draw_view                view3d_draw.c         1533 0x3db5761 
14  view3d_main_region_draw         view3d_draw.c         1557 0x3db5806 
15  ED_region_do_draw               area.c                534  0x3e7db33 
16  wm_draw_window_offscreen        wm_draw.c             629  0x33619d4 
17  wm_draw_window                  wm_draw.c             765  0x3361f53 
18  wm_draw_update                  wm_draw.c             947  0x336252b 
19  WM_main                         wm.c                  423  0x335e3bc 
20  main                            creator.c             491  0x2d036e6 
crashes here `node_start` is NULL ``` 1 iter_backwards_ex node.c 955 0x2e6cb4c 2 nodeChainIterBackwards node.c 998 0x2e6cc68 3 ntreeGPUMaterialNodes node_shader_tree.c 861 0x47023a9 4 GPU_material_from_nodetree gpu_material.c 677 0x8289a79 5 DRW_shader_create_from_material draw_manager_shader.c 443 0x392216b 6 EEVEE_material_mesh_get eevee_materials.c 725 0x38c2d42 7 material_opaque eevee_materials.c 1161 0x38c4058 8 EEVEE_materials_cache_populate eevee_materials.c 1486 0x38c518a 9 EEVEE_cache_populate eevee_engine.c 123 0x38b5333 10 drw_engines_cache_populate draw_manager.c 1145 0x3882e47 11 DRW_draw_render_loop_ex draw_manager.c 1663 0x38842cf 12 DRW_draw_view draw_manager.c 1565 0x3883e2b 13 view3d_draw_view view3d_draw.c 1533 0x3db5761 14 view3d_main_region_draw view3d_draw.c 1557 0x3db5806 15 ED_region_do_draw area.c 534 0x3e7db33 16 wm_draw_window_offscreen wm_draw.c 629 0x33619d4 17 wm_draw_window wm_draw.c 765 0x3361f53 18 wm_draw_update wm_draw.c 947 0x336252b 19 WM_main wm.c 423 0x335e3bc 20 main creator.c 491 0x2d036e6 ```
Member

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

This issue was referenced by 6b38c8a1ac

This issue was referenced by 6b38c8a1ac1bb480446d133a6704de1c5ecd1e28
Clément Foucault was assigned by Philipp Oeser 2019-10-02 12:53:49 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Still assigning to you, @fclem, but could you check if D5969 does the trick?

Still assigning to you, @fclem, but could you check if [D5969](https://archive.blender.org/developer/D5969) does the trick?
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70441
No description provided.